Attempt to fix input rounding on ios

--- a/themes/hugodocs/pipeline/scss/base/_normalize.scss
+++ b/themes/hugodocs/pipeline/scss/base/_normalize.scss
@@ -411,7 +411,7 @@ input[type="search"] {
   /* 1 */
   box-sizing: content-box;
   /* 2 */
-  border-radius: 0px;
+  border-radius: 0px!important;
   outline:none;
 }
 
