--- a/themes/hugodocs/pipeline/scss/base/_typography.scss
+++ b/themes/hugodocs/pipeline/scss/base/_typography.scss
@@ -16,7 +16,7 @@ h1.page-title {
   padding-bottom: .75em;
   @include MQ(M) {
     font-size: 2.25em;
-    padding-top: 1em;
+    padding-top: 0px;
   }
   i[class^="icon-"] {
     margin-left: -.15em;
